# Autonomous-mobile-robot

./: .gitignore  .ycm_extra_conf.py  README.md  log.txt
cartographer_navigation/: .gitignore
cartographer_navigation/cartographer/: .gitignore  CMakeLists.txt
cartographer_navigation/cartographer_ros_ws/: .gitignore
cartographer_navigation/protobuf/cmake/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt  js_embed  rules.ninja
cartographer_navigation/src/: .rosinstall  .rosinstall.bak
cartographer_navigation/src/cartographer/: .gitignore
cartographer_navigation/src/cartographer_ros/: .gitignore
data/gridmap/: covert_gridmap.py  wandaf1.yaml
devel/: .catkin  .rosinstall  setup.sh
devel/include/arbotix_msgs/: Analog.h  Digital.h  EnableRequest.h  EnableResponse.h  RelaxRequest.h  RelaxResponse.h  SetSpeedRequest.h  SetSpeedResponse.h  SetupChannelRequest.h  SetupChannelResponse.h
devel/include/depthimage_to_laserscan/: DepthConfig.h
devel/lib/depthimage_to_laserscan/: depthimage_to_laserscan
devel/lib/pkgconfig/: arbotix_controllers.pc  arbotix_firmware.pc  arbotix_msgs.pc  arbotix_python.pc  arbotix_sensors.pc  depthimage_to_laserscan.pc  mrobot_description.pc  mrobot_gazebo.pc  mrobot_navigation.pc  mrobot_teleop.pc
src/: readme.md  visiualization.rviz
src/01_perception/fake_localization/: CMakeLists.txt  fake_localization.cpp
src/02_mapping/costmap_2d/: CMakeLists.txt  costmap_plugins.xml
src/03_navigation/move_base/: CMakeLists.txt
src/03_navigation/obstable_navigation/: CMakeLists.txt  package.xml
src/aibee_robot/: CMakeLists.txt  package.xml
src/aibee_robot/config/: aibee_robot_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml  sonar.urdf  sonar.xacro  vr_bot.1.xacro  vr_bot.urdf  vr_bot.xacro  waypoints.txt  waypoints_load.txt
src/aibee_robot/launch/: aibee_robot_localization.launch  aibee_robot_navigation.launch  aibee_robot_navigation_automove.launch  aibee_robot_navigation_cartographer.launch  aibee_robot_urdf.launch  fake_nav_demo.launch  gazebo_global_navi.launch  gazebo_navigation.launch  gazebo_navigation_automove.launch  move_base_global_local_gazebo.launch  obstable_gazebo.launch  obstable_gmapping_gazebo_test.launch  obstable_navigation_odom_amcl_movebase.launch  obstable_navigation_qingxuan.launch  obstable_recognition.launch  obstable_recognition_gazebo.launch  obstable_recognition_mapserver.launch  obstable_recognition_vRcar_AMCL.launch  obstable_recognition_vrCar.1.launch  obstable_recognition_vrCar.launch  obstable_recognition_vrCar_test.launch  obstable_vrCar_test.launch  online_vr_bot_localization2.launch
src/aibee_robot/maps/: a.yaml
src/aibee_robot/rviz/: auto_move.rviz  gapping.rviz  gazebo_global_navi.rviz  obstable.rviz
src/aibee_robot/scripts/: obstable_navigation.py  random_navigation.py
src/aibee_robot/src/: aibee_navi.cpp  aibee_navi_node.cpp  global_navi.cpp  global_navi_node.cpp  rplidar_time_sync.cpp
src/data/: .gitignore  record (copy).sh  record.sh  vr_bot.urdf
src/data/calibration/: save_info.txt
src/funcion_navigation/cmd_control/: CMakeLists.txt  package.xml
src/funcion_navigation/cmd_control/msg/: keyDataOrParam.msg
src/funcion_navigation/cmd_control/src/: auto_move_node.cpp  cmd_control.cpp  cmd_control_pad.cpp  data_record_node.cpp  vel_acc_graph.cpp  waypoints_with_loadPoints.cpp
src/funcion_navigation/cmd_control/srv/: cmd_control.srv
src/funcion_navigation/map_srv/: CMakeLists.txt  package.xml
src/funcion_navigation/map_srv/src/: check_odom_position.1.cpp  check_odom_position.cpp  click_move_to_goal.cpp  fake_odom_test.cpp  map_srv.cpp  temp_map.cpp
src/funcion_navigation/map_srv/srv/: mapSave.srv
src/funcion_navigation/obstable_detection/: CMakeLists.txt  package.xml
src/funcion_navigation/obstable_detection/launch/: obstable_detection.launch
src/funcion_navigation/obstable_detection/lib/cjson/: test.c
src/funcion_navigation/obstable_detection/msg/: obstable_detection_msg.msg
src/funcion_navigation/obstable_detection/src/: obstable_detection.cpp
src/improved_SLAM/A-LOAM/: CMakeLists.txt  test.sh
src/move_base/: CMakeLists.txt  readme.md
src/ros_gazebo_sim/: install_package.md
src/ros_navigation/: readme.md
src/ros_navigation/04_integration_navigation/aibee_navi/: CMakeLists.txt  package.xml
src/ros_navigation/04_integration_navigation/aibee_navi/include/aibee_navi/: aibee_navi.h  point_types.h
src/ros_navigation/04_integration_navigation/aibee_navi/launch/: global_navi.launch
src/ros_navigation/04_integration_navigation/aibee_navi/src/: aibee_navi.cpp  aibee_navi_node.cpp
src/ros_navigation/04_integration_navigation/global_navi/: CMakeLists.txt  package.xml
src/ros_navigation/04_integration_navigation/global_navi/config/: global_costmap_params.yaml
src/ros_navigation/04_integration_navigation/global_navi/include/global_navi/: global_navi.h
src/ros_navigation/04_integration_navigation/global_navi/launch/: gazebo_test_global_nav.launch  global_navi.launch
src/ros_navigation/04_integration_navigation/global_navi/src/: global_navi.cpp  global_navi_node.cpp
src/sensor_interface/sonars_to_pointcloud/: CMakeLists.txt  package.xml
src/sensor_interface/sonars_to_pointcloud/src/: rplidar_to_pointcloud.cpp  sonars_to_pointcloud.cpp
src/sensor_interface/wheel_speed_to_odo/: CMakeLists.txt  package.xml
src/sensor_interface/wheel_speed_to_odo/launch/: .amcl_diff.launch.swp  .nav_amcl.launch.swp  aibee.launch  nav_amcl.launch  odom.launch  odom_use_simtime.launch
src/sensor_interface/wheel_speed_to_odo/msg/: wheelSpeed.msg
src/sensor_interface/wheel_speed_to_odo/robot_msgs/: .msg  CMakeLists.txt  package.xml
src/sensor_interface/wheel_speed_to_odo/robot_msgs/msg/: LEDCtrl.msg  batInfoBase.msg  cameraExposureCtrl.msg  fingerprint.msg  fingerprintlist.msg  imageTimeStamp.msg  imuRawData.msg  panoramicCapture.msg  panoramicStatus.msg  rangeRadar.msg  wheelSpeed.msg
src/sensor_interface/wheel_speed_to_odo/src/: wheel_odo.cpp
(+355 files in other folders)
