<?xml version="1.0"?>
<package format="2">
    <name>sonars_to_pointcloud</name>
    <version>1.4.0</version>
    <description>Converts a 3D Point Cloud into a 2D laser scan. This is useful for making devices like the Kinect appear like a laser scanner for 2D-based algorithms (e.g. laser-based SLAM).</description>

    <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
    <author email="paul@bovbel.com">Paul Bovbel</author>
    <author>Tully Foote</author>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>laser_geometry</depend>
    <depend>message_filters</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_sensor_msgs</depend>

</package>
