<package>
    <name>global_navi</name>
    <version>1.1.0</version>
    <description>
        主要功能的描述
        - 订阅occupied grid map
        - 生成costmap
        - 根据 pose and goal 进行路径规划     

    </description>

    <author>Hualong</author>
    <maintainer email="lvhualong@tju.edu.cn">David V. Lu!!</maintainer>
    <license>BSD</license>
    <url>https://github.com/Sunshinehualong/ros_ws_utils.git</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>move_base_msgs</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>laser_geometry</build_depend>

    <!--These deps aren't strictly needed, but given the default parameters require them to work, we'll enforce that they build -->
    <build_depend>base_local_planner</build_depend>
    <build_depend>clear_costmap_recovery</build_depend>
    <build_depend>navfn</build_depend>
    <build_depend>rotate_recovery</build_depend>
    

    
    <run_depend>base_local_planner</run_depend>
    <run_depend>clear_costmap_recovery</run_depend>
    <run_depend>navfn</run_depend>
    <run_depend>rotate_recovery</run_depend>
    <run_depend>laser_geometry</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>move_base_msgs</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>tf</run_depend>

</package>
